# Racecar-tools-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-android.yml  build-macos.yml  build-windows.yml
android/: AndroidManifest.xml
resources/: RacecarTools.icns  app.rc
src/: main.cpp
src/core/: DigitRecognizer.cpp  DigitRecognizer.h  SDAnalyzer.cpp  SDAnalyzer.h  VideoProcessor.cpp  VideoProcessor.h  VideoWrapper.cpp  VideoWrapper.h
src/widgets/: DataEditor.cpp  DataEditor.h  MainWindow.cpp  MainWindow.h  PlotPage.cpp  PlotPage.h  PlotWidget.cpp  PlotWidget.h  ROISelector.cpp  ROISelector.h  VideoPlayer.cpp  VideoPlayer.h
